<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#3A5784"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="Todays Weather"
            />

    <EditText
            android:id="@+id/edit_text_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:hint="@string/hint_location"
            />

    <Button
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dip"
            android:text="@string/button_search"
            android:enabled="false"
            />

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
             >
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dip"
                >
        <TextView
                android:id="@+id/label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_view_date"
                />
        <TextView
                android:id="@+id/date_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dip"
                >
        <TextView
                android:id="@+id/label_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/txt_view_temp"
                />
        <TextView
                android:id="@+id/temperature_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dip"
                >
        <TextView
                android:id="@+id/label_precip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/txt_view_precip"
                />
        <TextView
                android:id="@+id/precip_val"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dip"
                >
        <TextView
                android:id="@+id/label_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:text="@string/txt_view_desc"
                />
        <TextView
                android:id="@+id/desc_val"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
    </TableLayout>

    <Button
            android:id="@+id/button_weeks_weather"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dip"
            android:text="@string/button_weeks_weather"
            android:enabled="true"
            />

</LinearLayout>

