<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#3A5784"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="Todays Weather"
            />

    <EditText
            android:id="@+id/edit_text_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:hint="@string/hint_location"
            />

    <Button
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dip"
            android:text="@string/button_search"
            android:enabled="false"
            />

            <include layout="@layout/weeks_weather_list_item"/>


    <Button
            android:id="@+id/button_weeks_weather"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/button_weeks_weather"
            android:enabled="false"
            />

</LinearLayout>

